testing/tests/ui/ref_deref.stderr
error: failed to parse template source
 --> <source attribute>:1:7
       "*x = 2 %}"
 --> tests/ui/ref_deref.rs:4:21
  |
4 | #[template(source = "{% let *x = 2 %}", ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^
